--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,12 @@ publish/
 
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
-#packages/
+packages/
+
+## Ignore other nuget stuff
+.nuget/
+*.nuspec
+*.nupkg
 
 # Windows Azure Build Output
 csx
